haven't pushed in a while

--- a/02 Jupyter Notebook/02 Jupyter Notebook Presentation 1 -- The Basics -1.ipynb
+++ b/02 Jupyter Notebook/02 Jupyter Notebook Presentation 1 -- The Basics -1.ipynb
@@ -24,9 +24,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e56249ce",
+   "metadata": {},
+   "source": [
+    "# Table of Contents\n",
+    "\n",
+    "I.     [What is a Jupyter Notebook?](#1)<br>\n",
+    "\n",
+    "II.    [Why Jupyter Notebooks?](#2)<br>\n",
+    "\n",
+    "III.   [How do you create your own Jupyter Notebook?](#3)<br>\n",
+    "\n",
+    "IV.    [The 3 main things that you want to learn about:](#4)<br>\n",
+    "\n",
+    "   a. [Notebook user interfaces](#4a)<br>\n",
+    "      1. [Title](#4a1)<br>\n",
+    "      2. [Menu bar](#4a2)<br>\n",
+    "      3. [Toolbar](#4a3)<br>\n",
+    "      4. [Mode indicator](#4a4)<br>\n",
+    "      5. [Kernal indicator](#4a5)<br>\n",
+    "      6. [Notification area](#4a6)<br>\n",
+    "\n",
+    "   b. [Cell types](#4b)<br>\n",
+    "\n",
+    "   c. [Keyboard Input Modes](#4c)<br>\n",
+    "\n",
+    "V.    [Running code in a cell](#5)<br>\n",
+    "\n",
+    "VI.   [Displaying multiple output in one cell](#6)<br>\n",
+    "\n",
+    "VII.  [Running markdown syntax in a text cell](#7)<br>\n",
+    "\n",
+    "VIII. [Adding style and formatting to your Markdown text](#8)<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0db653b7",
    "metadata": {},
    "source": [
+    "<a class=\"anchor\" id=\"1\"></a>\n",
     "#  I.  What is a Jupyter Notebook?"
    ]
   },
@@ -67,6 +104,7 @@
    "id": "1c78f808",
    "metadata": {},
    "source": [
+    "<a class=\"anchor\" id=\"2\"></a>\n",
     "#  II.  Why Jupyter Notebooks?"
    ]
   },
@@ -103,6 +141,7 @@
    "id": "f1499c90",
    "metadata": {},
    "source": [
+    "<a class=\"anchor\" id=\"3\"></a>\n",
     "# III. How do you create your own Jupyter Notebook?"
    ]
   },
@@ -152,7 +191,8 @@
    "id": "42523af4",
    "metadata": {},
    "source": [
-    "# IV. The 3 main things that you want to learn about:\n"
+    "<a class=\"anchor\" id=\"4\"></a>\n",
+    "# IV. The 3 main things that you want to learn about:"
    ]
   },
   {
@@ -176,7 +216,8 @@
    "id": "bf2fd391",
    "metadata": {},
    "source": [
-    "### A. Notebook user interfaces"
+    "<a class=\"anchor\" id=\"4a\"></a>\n",
+    "### a. Notebook user interfaces"
    ]
   },
   {
@@ -235,6 +276,7 @@
    "id": "9de4fbf0",
    "metadata": {},
    "source": [
+    "<a class=\"anchor\" id=\"4a1\"></a>\n",
     "#### 1. Title\n",
     "\n",
     "This is your filename and this is where you can change the file name of your Notebook."
@@ -245,6 +287,7 @@
    "id": "95554197",
    "metadata": {},
    "source": [
+    "<a class=\"anchor\" id=\"4a2\"></a>\n",
     "#### 2. Menu bar\n",
     "\n",
     "This is similar to any other desktop application; it allows you to do different actions with the Notebook."
@@ -255,6 +298,7 @@
    "id": "8e491a9e",
    "metadata": {},
    "source": [
+    "<a class=\"anchor\" id=\"4a3\"></a>\n",
     "#### 3. Toolbar\n",
     "\n",
     "This is located below the menu bar and contains little icons to perform some commonly used actions ... e.g. saving a file, cutting cells, pasting cells, moving cells, etc."
@@ -265,6 +309,7 @@
    "id": "ce5ccaa2",
    "metadata": {},
    "source": [
+    "<a class=\"anchor\" id=\"4a4\"></a>\n",
     "#### 4. Mode indicator\n",
     "\n",
     "This is located on the right hand side of the menu bar.  The Notebook has two modes -- Edit mode and Command mode. This will be discussed in greater detail below."
@@ -275,6 +320,7 @@
    "id": "c510ced5",
    "metadata": {},
    "source": [
+    "<a class=\"anchor\" id=\"4a5\"></a>\n",
     "#### 5. Kernal indicator\n",
     "\n",
     "This display's the status of the system's computation progress.  To interrupt the computations that are in progress, you can use the stop button located on the toolbar."
@@ -285,6 +331,7 @@
    "id": "b7744440",
    "metadata": {},
    "source": [
+    "<a class=\"anchor\" id=\"4a6\"></a>\n",
     "#### 6. Notification area\n",
     "\n",
     "This area will display messages, suchas **saving the file**, or **interrupting the kernal**, etc. -- and you will see the actions that you are performing in the notification area."
@@ -295,7 +342,8 @@
    "id": "fd73f31b",
    "metadata": {},
    "source": [
-    "### B. Cell types"
+    "<a class=\"anchor\" id=\"4b\"></a>\n",
+    "### b. Cell types"
    ]
   },
   {
@@ -345,7 +393,8 @@
    "id": "2383eb57",
    "metadata": {},
    "source": [
-    "### C. Keyboard Input Modes "
+    "<a class=\"anchor\" id=\"4c\"></a>\n",
+    "### c. Keyboard Input Modes "
    ]
   },
   {
@@ -378,6 +427,7 @@
    "id": "e1deaec4",
    "metadata": {},
    "source": [
+    "<a class=\"anchor\" id=\"5\"></a>\n",
     "# V. Running code in a cell\n",
     " \n",
     "<p>&nbsp;</p>  \n",
@@ -496,6 +546,7 @@
    "id": "de4a403a",
    "metadata": {},
    "source": [
+    "<a class=\"anchor\" id=\"6\"></a>\n",
     "# VI. Displaying multiple output in one cell"
    ]
   },
@@ -591,6 +642,7 @@
     }
    },
    "source": [
+    "<a class=\"anchor\" id=\"7\"></a>\n",
     "# VII. Running markdown syntax in a text cell"
    ]
   },
@@ -615,7 +667,8 @@
    "id": "93fbc4c1",
    "metadata": {},
    "source": [
-    "# VII. Adding style and formatting to your Markdown text"
+    "<a class=\"anchor\" id=\"8\"></a>\n",
+    "# VIII. Adding style and formatting to your Markdown text"
    ]
   },
   {
@@ -623,8 +676,6 @@
    "id": "18de6987",
    "metadata": {},
    "source": [
-    "<p>&nbsp;</p> \n",
-    "\n",
     "We will now learn how to do a number of fun things withn Markdown.\n",
     "\n",
     "... e.g. headings, bold, italics, insert images, insert URLs, add color, etc.</font>\n"
