--- a/02 Jupyter Notebook/02 Jupyter Notebook Presentation 2 -- Adding Style and Formatting to Markdown Text  (1).ipynb
+++ b/02 Jupyter Notebook/02 Jupyter Notebook Presentation 2 -- Adding Style and Formatting to Markdown Text  (1).ipynb
@@ -24,10 +24,55 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0006e7fd",
+   "metadata": {},
+   "source": [
+    "# Table of Contents\n",
+    "\n",
+    "1.  [A Markdown Guide for Jupyter Notebook](#1)<br>\n",
+    "2.  [Headings](#2)<br>\n",
+    "3.  [Bold Text](#3)<br>\n",
+    "4.  [Italics](#4)<br>\n",
+    "5.  [Bold & Italics](#5)<br>\n",
+    "6.  [Strikethrough](#6)<br>\n",
+    "7.  [Backslash Escape](#7)<br>\n",
+    "8.  [Horizontal Lines](#8)<br>\n",
+    "9.  [Adding Images to a Markdown Cell](#9)<br>\n",
+    "10. [Adding Hyperlinks to a Markdown Cell](#10)<br>\n",
+    "11. [Using Color](#11)<br>\n",
+    "a.  [COLORED NOTE BOXES](#11a)<br>\n",
+    "b.  [TEXT COLORS](#11b)<br>\n",
+    "c.  [HIGHLIGHTING COLORS](#11c)<br>\n",
+    "12. [Font Families](#12)<br>\n",
+    "13. [Font Sizes](#13)<br>\n",
+    "14. [Centering Text](#14)<br>\n",
+    "15. [Line Break](#15)<br>\n",
+    "16. [Blockquotes](#16)<br>\n",
+    "17. [Nested Blockquotes](#17)<br>\n",
+    "18. [Ordered List](#18)<br>\n",
+    "19. [Unordered List](#19)<br>\n",
+    "20. [Outline List](#20)<br>\n",
+    "21. [Reference Style Formatting for Images](#21)<br>\n",
+    "22. [Reference Style Links](#22)<br>\n",
+    "23. [Anchor Links](#23)<br>\n",
+    "24. [Task Lists](#24)<br>\n",
+    "25. [Tables](#25)<br>\n",
+    "26. [YouTube Videos (Embedding an Image That Links to a YouTube)](#26)<br>\n",
+    "27. [Definition Lists](#27)<br>\n",
+    "28. [Navigation Menus](#28)<br>\n",
+    "29. [LaTeX Math](#29)<br>\n",
+    "30. [Geometric Shapes](#30)<br>\n",
+    "31. [Table of Contents](#31)<br>\n",
+    "32. [Adding Spaces; Indenting; and Skipping Lines/Creating Blank Lines](#32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1ae9eb26",
    "metadata": {},
    "source": [
-    "# I. A Markdown Guide for Jupyter Notebook"
+    "<a class=\"anchor\" id=\"1\"></a>\n",
+    "# 1. A Markdown Guide for Jupyter Notebook"
    ]
   },
   {
@@ -73,7 +118,8 @@
    "id": "08933cda",
    "metadata": {},
    "source": [
-    "# II. Headings"
+    "<a class=\"anchor\" id=\"2\"></a>\n",
+    "# 2. Headings"
    ]
   },
   {
@@ -170,7 +216,8 @@
    "id": "d67c2a8c",
    "metadata": {},
    "source": [
-    "# III. Bold Text"
+    "<a class=\"anchor\" id=\"3\"></a>\n",
+    "# 3. Bold Text"
    ]
   },
   {
@@ -253,7 +300,8 @@
    "id": "1fa9636e",
    "metadata": {},
    "source": [
-    "# IV. Italics"
+    "<a class=\"anchor\" id=\"4\"></a>\n",
+    "# 4. Italics"
    ]
   },
   {
@@ -336,7 +384,8 @@
    "id": "67cbb57b",
    "metadata": {},
    "source": [
-    "# V. Bold & Italics"
+    "<a class=\"anchor\" id=\"5\"></a>\n",
+    "# 5. Bold & Italics"
    ]
   },
   {
@@ -419,7 +468,8 @@
    "id": "5b69a7b7",
    "metadata": {},
    "source": [
-    "# VI. Strikethrough"
+    "<a class=\"anchor\" id=\"6\"></a>\n",
+    "# 6. Strikethrough"
    ]
   },
   {
@@ -455,7 +505,8 @@
    "id": "27a2fb95",
    "metadata": {},
    "source": [
-    "# VII. Backslash Escape"
+    "<a class=\"anchor\" id=\"7\"></a>\n",
+    "# 7. Backslash Escape"
    ]
   },
   {
@@ -511,7 +562,8 @@
    "id": "9ab70fcb",
    "metadata": {},
    "source": [
-    "# VIII. Horizontal Lines"
+    "<a class=\"anchor\" id=\"8\"></a>\n",
+    "# 8. Horizontal Lines"
    ]
   },
   {
@@ -604,7 +656,8 @@
    "id": "a00ab032",
    "metadata": {},
    "source": [
-    "# IX. Adding Images to a Markdown Cell"
+    "<a class=\"anchor\" id=\"9\"></a>\n",
+    "# 9. Adding Images to a Markdown Cell"
    ]
   },
   {
@@ -728,7 +781,8 @@
    "id": "d93c8d91",
    "metadata": {},
    "source": [
-    "# X. Adding Hyperlinks to a Markdown Cell"
+    "<a class=\"anchor\" id=\"10\"></a>\n",
+    "# 10. Adding Hyperlinks to a Markdown Cell"
    ]
   },
   {
@@ -840,7 +894,8 @@
    "id": "e376037c",
    "metadata": {},
    "source": [
-    "# XI. Using Color"
+    "<a class=\"anchor\" id=\"11\"></a>\n",
+    "# 11. Using Color"
    ]
   },
   {
@@ -858,7 +913,8 @@
    "id": "0f7e7b14",
    "metadata": {},
    "source": [
-    "###  A. COLORED NOTE BOXES"
+    "<a class=\"anchor\" id=\"11a\"></a>\n",
+    "###  a. COLORED NOTE BOXES"
    ]
   },
   {
@@ -944,10 +1000,182 @@
   },
   {
    "cell_type": "markdown",
+   "id": "81b300a8",
+   "metadata": {},
+   "source": [
+    "<a class=\"anchor\" id=\"11b\"></a>\n",
+    "### b. TEXT COLORS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc229bc6",
+   "metadata": {},
+   "source": [
+    "#### To use text color BLUE \n",
+    "<span style=\"color:blue\">The color that I am using is BLUE!</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e075c80",
+   "metadata": {},
+   "source": [
+    "#### To use text color YELLOW\n",
+    "\n",
+    "<span style=\"color:yellow\">The color that I am using is YELLOW!</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4581572d",
+   "metadata": {},
+   "source": [
+    "#### To use text color GREEN \n",
+    "\n",
+    "<span style=\"color:green\">The color that I am using is GREEN!</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "658a08e5",
+   "metadata": {},
+   "source": [
+    "#### To use text color ORANGE\n",
+    "\n",
+    "<span style=\"color:orange\">The color that I am using is ORANGE!</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e7a4b49",
+   "metadata": {},
+   "source": [
+    "#### To use text color PURPLE\n",
+    "\n",
+    "<span style=\"color:purple\">The color that I am using is PURPLE!</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "350e1fa0",
+   "metadata": {},
+   "source": [
+    "### Try some other colors!!! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b48703b",
+   "metadata": {},
+   "source": [
+    "#### To use text color PINK\n",
+    "\n",
+    "<span style=\"color:pink\">The color that I am using is PINK!</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd0dab08",
+   "metadata": {},
+   "source": [
+    "### To use text color CHARTREUSE\n",
+    "\n",
+    "<span style=\"color:chartreuse\">The color that I am using is CHARTREUSE!</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce0f3c1a",
+   "metadata": {},
+   "source": [
+    "For a list of all the supported color names, checkout [HTML Color Names](https://www.w3schools.com/colors/colors_names.asp)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8000839",
+   "metadata": {},
+   "source": [
+    "### You can also use the hex value to get the color!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de2e9c77",
+   "metadata": {},
+   "source": [
+    "### To use text color DEEP SKY BLUE\n",
+    "\n",
+    "<span style=\"color:#00BFFF\">The color that I am using is DEEP SKY BLUE!</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caac03c1",
+   "metadata": {},
+   "source": [
+    "### To use text color MEDIUM VIOLET RED\n",
+    "\n",
+    "<span style=\"color:#C71585\">The color that I am using is MEDIUM VIOLET RED!</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33e9959f",
+   "metadata": {},
+   "source": [
+    "<a class=\"anchor\" id=\"11c\"></a>\n",
+    "### c. HIGHLIGHTING COLORS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f87708f",
+   "metadata": {},
+   "source": [
+    "#### To highlight black text with a yellow highlighter\n",
+    "\n",
+    "<code style=\"background:yellow;color:black\">Useful for highlighting to grab the attention of the reader towards certain points.</code>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20b5630e",
+   "metadata": {},
+   "source": [
+    "#### To highlight white text with a blue highlighter\n",
+    "\n",
+    "<code style=\"background:blue;color:white\">Useful for highlighting to grab the attention of the reader towards certain points.</code>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "742157da",
+   "metadata": {},
+   "source": [
+    "#### To highlight white text with a black highlighter\n",
+    "\n",
+    "<code style=\"background:black;color:white\">Useful for highlighting to grab the attention of the reader towards certain points.</code>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a73d3534",
+   "metadata": {},
+   "source": [
+    "#### To highlight green text with a pink highlighter\n",
+    "\n",
+    "<code style=\"background:pink;color:green\">Useful for highlighting to grab the attention of the reader towards certain points.</code>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b597b324",
    "metadata": {},
    "source": [
-    "# XII. Font Families"
+    "<a class=\"anchor\" id=\"12\"></a>\n",
+    "# 12. Font Families"
    ]
   },
   {
@@ -997,7 +1225,8 @@
    "id": "18b911cb",
    "metadata": {},
    "source": [
-    "# XIII. Font Sizes"
+    "<a class=\"anchor\" id=\"13\"></a>\n",
+    "# 13. Font Sizes"
    ]
   },
   {
@@ -1052,7 +1281,8 @@
    "id": "4286a087",
    "metadata": {},
    "source": [
-    "# XIV. Centering Text"
+    "<a class=\"anchor\" id=\"14\"></a>\n",
+    "# 14. Centering Text"
    ]
   },
   {
@@ -1102,7 +1332,8 @@
    "id": "98326a80",
    "metadata": {},
    "source": [
-    "# XV. Line Break"
+    "<a class=\"anchor\" id=\"15\"></a>\n",
+    "# 15. Line Break"
    ]
   },
   {
@@ -1140,15 +1371,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2966a752",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59886b35",
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "623f7a8d",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c8fad6c",
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -1156,7 +1391,8 @@
    "id": "f6da4c9e",
    "metadata": {},
    "source": [
-    "# XVI. Blockquotes"
+    "<a class=\"anchor\" id=\"16\"></a>\n",
+    "# 16. Blockquotes"
    ]
   },
   {
@@ -1243,7 +1479,8 @@
    "id": "f15672e9",
    "metadata": {},
    "source": [
-    "# XVII. Nested Blockquotes"
+    "<a class=\"anchor\" id=\"17\"></a>\n",
+    "# 17. Nested Blockquotes"
    ]
   },
   {
@@ -1289,7 +1526,8 @@
    "id": "157589c4",
    "metadata": {},
    "source": [
-    "# XVIII. Ordered List"
+    "<a class=\"anchor\" id=\"18\"></a>\n",
+    "# 18. Ordered List"
    ]
   },
   {
@@ -1348,7 +1586,8 @@
    "id": "52656b24",
    "metadata": {},
    "source": [
-    "# XIX. Unordered List"
+    "<a class=\"anchor\" id=\"19\"></a>\n",
+    "# 19. Unordered List"
    ]
   },
   {
@@ -1413,7 +1652,8 @@
    "id": "3c3cc11c",
    "metadata": {},
    "source": [
-    "# XX. Outline List"
+    "<a class=\"anchor\" id=\"20\"></a>\n",
+    "# 20. Outline List"
    ]
   },
   {
@@ -1458,7 +1698,8 @@
    "id": "5985d121",
    "metadata": {},
    "source": [
-    "# XXI. Reference Style Formatting for Images"
+    "<a class=\"anchor\" id=\"21\"></a>\n",
+    "# 21. Reference Style Formatting for Images"
    ]
   },
   {
@@ -1534,7 +1775,8 @@
    "id": "c3e0fb60",
    "metadata": {},
    "source": [
-    "# XXII. Reference Style Links"
+    "<a class=\"anchor\" id=\"22\"></a>\n",
+    "# 22. Reference Style Links"
    ]
   },
   {
@@ -1593,7 +1835,8 @@
     }
    },
    "source": [
-    "# XXIII. Anchor Links"
+    "<a class=\"anchor\" id=\"23\"></a>\n",
+    "# 23. Anchor Links"
    ]
   },
   {
@@ -1672,7 +1915,8 @@
    "id": "e010ffe3",
    "metadata": {},
    "source": [
-    "# XXIV. Task Lists"
+    "<a class=\"anchor\" id=\"24\"></a>\n",
+    "# 24. Task Lists"
    ]
   },
   {
@@ -1723,7 +1967,8 @@
    "id": "63c5722c",
    "metadata": {},
    "source": [
-    "# XXV.Tables"
+    "<a class=\"anchor\" id=\"25\"></a>\n",
+    "# 25.Tables"
    ]
   },
   {
@@ -1778,19 +2023,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e70474f0",
+   "cell_type": "markdown",
+   "id": "4cd50ea3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "| How | To | Make | a table|\n",
+    "| :---: | :---: | :---: | :---: |\n",
+    "| in   | <span style= 'background:yellow'> Jupyter </span>| <span style= 'background:yellow'> Notebook </span>| <span style= 'background:yellow'> Markdown </span> |\n",
+    "| It | is | really| cool |"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "810a577d",
    "metadata": {},
    "source": [
-    "# XXVI. YouTube Videos (Embedding an Image That Links to a YouTube)"
+    "<a class=\"anchor\" id=\"26\"></a>\n",
+    "# 26. YouTube Videos (Embedding an Image That Links to a YouTube)"
    ]
   },
   {
@@ -1841,7 +2090,8 @@
    "id": "c9e31fc5",
    "metadata": {},
    "source": [
-    "# XXVII.  Definition Lists"
+    "<a class=\"anchor\" id=\"27\"></a>\n",
+    "# 27.  Definition Lists"
    ]
   },
   {
@@ -1875,12 +2125,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd7fc874",
+   "cell_type": "markdown",
+   "id": "280f5c9c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "<dl>\n",
+    "<dt>First Term</dt>\n",
+    "<dd>This is the definition of the first term.</dd>\n",
+    "<dt>Second Term</dt>\n",
+    "<dd>This is one definition of the second term. </dd>\n",
+    "<dd>This is another definition of the second term.</dd>\n",
+    "</dl>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1920,7 +2177,8 @@
    "id": "c6576812",
    "metadata": {},
    "source": [
-    "# XXVIII. Navigation Menus"
+    "<a class=\"anchor\" id=\"28\"></a>\n",
+    "# 28. Navigation Menus"
    ]
   },
   {
@@ -1980,7 +2238,8 @@
    "id": "0fbffed7",
    "metadata": {},
    "source": [
-    "# XXIX. LaTeX Math"
+    "<a class=\"anchor\" id=\"29\"></a>\n",
+    "# 29. LaTeX Math"
    ]
   },
   {
@@ -2034,7 +2293,8 @@
    "id": "ed9262df",
    "metadata": {},
    "source": [
-    "# XXX. Geometric Shapes"
+    "<a class=\"anchor\" id=\"30\"></a>\n",
+    "# 30. Geometric Shapes"
    ]
   },
   {
@@ -2074,7 +2334,7 @@
    "id": "288f3dba",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\"><b>Example:</b> Run and study the code in the following RawNBConvert cell to see and undertsand how to make GEOMETRIC FIGURES in a Markdown cell..\n",
+    "<div class=\"alert alert-block alert-success\"><b>Example:</b> Run and study the code in the following RawNBConvert cell to see and understand how to make GEOMETRIC FIGURES in a Markdown cell..\n",
     "      \n",
     " </div>\n"
    ]
@@ -2120,7 +2380,8 @@
    "id": "c8529571",
    "metadata": {},
    "source": [
-    "# XXXI. Table of Contents"
+    "<a class=\"anchor\" id=\"31\"></a>\n",
+    "# 31. Table of Contents"
    ]
   },
   {
@@ -2140,9 +2401,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "32e76538",
+   "metadata": {},
+   "source": [
+    "<a class=\"anchor\" id=\"32\"></a>\n",
+    "# 32. Adding Spaces; Indenting; and Skipping Lines/Creating Blank Lines"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "310270c0",
+   "metadata": {},
+   "source": [
+    "Adding Spaces\n",
+    "*************\n",
+    "\n",
+    "1. Type &nbsp; to add a single space\n",
+    "2. Type &ensp; to add 2 spaces\n",
+    "3. Type &emsp; to add 4 spaces\n",
+    "4. Use &nbsp; 4 times to insert a tab.\n",
+    "\n",
+    "Line breaks\n",
+    "***********\n",
+    "Sometimes markdown doesn’t make line breaks when you want them. To force a linebreak, use the following code: <br>"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "875e1d9f",
+   "metadata": {},
+   "source": [
+    "John<br>\n",
+    "&nbsp; John<br>\n",
+    "&ensp; John<br>\n",
+    "&emsp; John<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; John<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3aa7d41c",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\"><b>Example:</b> Run and study the code in the RawNBConvert cell above to see and understand how to include spaces and line breaks in a Markdown cell.\n",
+    "</div>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "c9d75894",
+   "metadata": {},
+   "source": [
+    "Indenting\n",
+    "*********\n",
+    "\n",
+    "Use the greater than sign (>) followed by a space, for example:\n",
+    "\n",
+    "This text will not be indented.\n",
+    "> Using the greater than sign will indent this text.\n",
+    ">> Using three greater than signs will indent this text even further."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "289d3f9d",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\"><b>Example:</b> Run and study the code in the RawNBConvert cell above to see and understand how to indent text in a Markdown cell.\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "93b77fe6",
+   "metadata": {},
+   "source": [
+    "Skipping Lines (i.e. Creating a Blank Line)\n",
+    "*******************************************\n",
+    "\n",
+    "Use <p>&nbsp;</p> to skip a line (i.e. to create a blank line) in Markdown.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7aec1c87",
+   "metadata": {},
+   "source": [
+    "This is line 1.<br>\n",
+    "This is line 2.<br>\n",
+    "This is line 3.\n",
+    "\n",
+    "This is line 4.<br>\n",
+    "This is line 5.<br>\n",
+    "<p>&nbsp;</p>\n",
+    "This is line 6."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9edc605a",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\"><b>Example:</b> Run and study the code in the RawNBConvert cell above to see and understand how to skip a line/create a blank line in a Markdown cell.\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d267de3b",
+   "id": "d27fc1be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "967926de",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2164,7 +2542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
