--- a/02 Jupyter Notebook/this is me-with-details-pdf-slideshow.ipynb
+++ b/02 Jupyter Notebook/this is me-with-details-pdf-slideshow.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "ae438f60",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<b> Noah Ren </b>"
    ]
@@ -11,7 +15,11 @@
   {
    "cell_type": "markdown",
    "id": "f929e978",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Table of Contents\n",
     "1.  [Software](#1)<br>\n",
@@ -24,7 +32,11 @@
   {
    "cell_type": "markdown",
    "id": "afd3d181",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "[this is me](https://docs.google.com/document/d/1p6pf2CwOQ8vVKaGYJA7cIvJpIMV7JEM70QsMwph1gE4/edit?usp=sharing) \n",
     "***\n",
@@ -52,11 +64,15 @@
   {
    "cell_type": "markdown",
    "id": "28ebdcf9",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<a class=\"anchor\" id=\"1\"></a>\n",
     "# i enjoy software\n",
-    "<details><div class=\"alert alert-block alert-warning\">Over the past 2 summers, I've done a software internship with <u>Code The Way</u>, working out of the <b>Artisan Partners</b> office.<br> Additionally, I enjoy<span style=\"color:red\"> coding in robotics. </span> (messed around some on my own with python, otherwise java/reactjs) "
+    "<div class=\"alert alert-block alert-warning\">Over the past 2 summers, I've done a software internship with <u>Code The Way</u>, working out of the <b>Artisan Partners</b> office.<br> Additionally, I enjoy<span style=\"color:red\"> coding in robotics. </span> (messed around some on my own with python, otherwise java/reactjs) "
    ]
   },
   {
@@ -67,7 +83,11 @@
    },
    "cell_type": "markdown",
    "id": "7ff45ea0",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![Screenshot%202023-09-11%20223738.png](attachment:Screenshot%202023-09-11%20223738.png)"
    ]
@@ -75,13 +95,15 @@
   {
    "cell_type": "markdown",
    "id": "54fe0f27",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<a class=\"anchor\" id=\"2\"></a>\n",
     "## i enjoy statistics & finance\n",
-    "<details>\n",
-    "<font size ='4'><div class=\"alert alert-block alert-success\"><span style='font-family:Times New Roman'> i've been helping<code style=\"background:yellow;color:black\"> habitat for humanity </code> with their <u>sales system</u>. i've also delved into the world of <i>finance</i> through my own research (applied materials!!)</span> </div> </font>\n",
-    "</details>"
+    "<font size ='4'><div class=\"alert alert-block alert-success\"><span style='font-family:Times New Roman'> i've been helping<code style=\"background:yellow;color:black\"> habitat for humanity </code> with their <u>sales system</u>. i've also delved into the world of <i>finance</i> through my own research (applied materials!!)</span> </div> </font>"
    ]
   },
   {
@@ -92,7 +114,11 @@
    },
    "cell_type": "markdown",
    "id": "1ae8cfc6",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![Screenshot%202023-09-11%20224058.png](attachment:Screenshot%202023-09-11%20224058.png)"
    ]
@@ -100,13 +126,16 @@
   {
    "cell_type": "markdown",
    "id": "1aa3e5d9",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<a class=\"anchor\" id=\"3\"></a>\n",
     "### extra-curriculurs are good\n",
-    "<details><div class=\"alert alert-block alert-info\">\n",
-    "Besides robotics, I also enjoy both forensics and debate, and being in Scouts (Eagle ~ a year ago). I also enjoy playing tennis\n",
-    "</details>"
+    "<div class=\"alert alert-block alert-info\">\n",
+    "Besides robotics, I also enjoy both forensics and debate, and being in Scouts (Eagle ~ a year ago). I also enjoy playing tennis"
    ]
   },
   {
@@ -117,7 +146,11 @@
    },
    "cell_type": "markdown",
    "id": "83d14876",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "![Screenshot%202023-09-11%20224627.png](attachment:Screenshot%202023-09-11%20224627.png)"
    ]
@@ -125,7 +158,11 @@
   {
    "cell_type": "markdown",
    "id": "a58c46d1",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<a class=\"anchor\" id=\"4\"></a>\n",
     "<h2>Summary</h2>\n",
@@ -138,7 +175,7 @@
     "    <th>things i enjoy</th>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "      <td align='left'>forensics</td>\n",
+    "      <td align='left'>forensics </td>\n",
     "    <td>code the way</td>\n",
     "    <td>percy jackson</td>\n",
     "  </tr>\n",
@@ -158,13 +195,18 @@
     "        <td> finance </td>\n",
     "    </tr>  \n",
     "\n",
-    "</table>"
+    "</table>\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "63c18903",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<a class=\"anchor\" id=\"5\"></a>\n",
     "<h2>I love geopolitics (below are some events I've been following)</h2>\n",
@@ -176,18 +218,18 @@
     "    <th>International</th>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "      <td align='left'><details> <summary>2024 Republican Primary (Click to show details)</summary><p>Currently, with his unconventional and bombastic style, Donald Trump has maintained his iron first on the Republican party. His lead in national polls over the current second place candidate stands at over 40 points. However, in the early states, where other candidates have devoted much more of their time, his lead shrinks down to 20-30 points, dependent on the state. Yet, the never-trumpers still hold out hope that after the early primaries, other cadnidates will drop out and consolidate around onen anti-trump alternative, giving them a chance to oust him.          \n",
-    "</p></details></td>\n",
-    "      <td><details> <summary>Myanmar - My own interest(Click to show details)</summary><p>Myanmars civil war has been largely under-reported by the mainstream media. It's between the military Junta, who took over in a 2021 coup, and the PDF (People's Defense Forces) who are allied with many ethnic groups who have been fighting for their own freedom for decades. The PDF trains with these ethnic forces, and has now started to make real progress against the Junta. However, the Junta uses largely Russia-provided military jets to wreak havoc among both civilians and the rebels alike. Basically without any outside help, the rebels are largely outgunned, but they stay determined. In the ending words of one documentary I watched, <b><i><u>\"A generation sacrificing their lives for a future they might never see.\"</u></i></b> (Channel 4 documentary on Myanmar)</p></details></td>\n",
+    "      <td align='left'><p><b>2024 Republican Primary:</b> Currently, with his unconventional and bombastic style, Donald Trump has maintained his iron first on the Republican party. His lead in national polls over the current second place candidate stands at over 40 points. However, in the early states, where other candidates have devoted much more of their time, his lead shrinks down to 20-30 points, dependent on the state. Yet, the never-trumpers still hold out hope that after the early primaries, other cadnidates will drop out and consolidate around onen anti-trump alternative, giving them a chance to oust him.          \n",
+    "</p></td>\n",
+    "      <td><p><b><i><u>Myanmar</u> - My own interest: Myanmars civil war has been largely under-reported by the mainstream media. It's between the military Junta, who took over in a 2021 coup, and the PDF (People's Defense Forces) who are allied with many ethnic groups who have been fighting for their own freedom for decades. The PDF trains with these ethnic forces, and has now started to make real progress against the Junta. However, the Junta uses largely Russia-provided military jets to wreak havoc among both civilians and the rebels alike. Basically without any outside help, the rebels are largely outgunned, but they stay determined. In the ending words of one documentary I watched, <u>\"A generation sacrificing their lives for a future they might never see.\"</u> (Channel 4 documentary on Myanmar)</i></b></p></td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "          <td align='left'><details> <summary>2024 Democratic Primary(Click to show details)</summary><p>Current President Joe Biden is all but guaranteed to be the Democratic nominee for 2024. Many of his potential challengers have all consolidated behind him, even as his approval ratings hover at around 40%. His potential challengers fear that they will still lose to Biden, and ruin their future political careers by weakening Biden, especially if he ends up losing the general election. \n",
-    "</p></details></td>\n",
-    "     <td><details> <summary>BRICS (Click to show details)</summary><p>BRICS consists of Brazil, Russia, India, China, and South Africa. It's ann economic organization of developing economies. However, they haven't done much substantive trade deals due to internal fighting. One thing that they were able to recently reach a consensus on, however, is expanding. Yet, many have called BRICS as a way for China to simply expand its sphere of influence, and create an alternative to the G7 and the West. One such way BRICS has thought about doing this is creatingn their own global currency, as part of de-dollarization. However, like many of their other initiatives, it hasn't gotten off the ground. While BRICS has a lot of potential to oppose the West, it first must show action and not just words.</p></details></td>\n",
+    "          <td align='left'><p><b>2024 Democratic Primary:</b> Current President Joe Biden is all but guaranteed to be the Democratic nominee for 2024. Many of his potential challengers have all consolidated behind him, even as his approval ratings hover at around 40%. His potential challengers fear that they will still lose to Biden, and ruin their future political careers by weakening Biden, especially if he ends up losing the general election. \n",
+    "</p></td>\n",
+    "     <td><p><b>BRICS:</b> BRICS consists of Brazil, Russia, India, China, and South Africa. It's ann economic organization of developing economies. However, they haven't done much substantive trade deals due to internal fighting. One thing that they were able to recently reach a consensus on, however, is expanding. Yet, many have called BRICS as a way for China to simply expand its sphere of influence, and create an alternative to the G7 and the West. One such way BRICS has thought about doing this is creatingn their own global currency, as part of de-dollarization. However, like many of their other initiatives, it hasn't gotten off the ground. While BRICS has a lot of potential to oppose the West, it first must show action and not just words.</p></td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "      <td><details> <summary>2024 Outside Factors(Click to show details)</summary><p>There are two key outside factors that oculd greatly influence the 2024 election. The first of which, is No labels, a potential moderate third party. The group already has 70 million on hand, and has been speaking to potential moderates such as Democratic Senator Joe Manchin, or Maryland's former Republican governor, Larry Hogan. This could siphon votes away from Biden, from the never-trumpers. The second factor is what congress or the supreme court does. The predicted red wave for the midterms didn't come to fruition, largely due to the Roe v. Wade ruling by the Supreme Court. Democrats are hoping that a baseless Republican impeachment could serve the same purpose for 2024.</p></details></td>\n",
-    "     <td><details> <summary>Japan Nuclear Water (Click to show details)</summary><p>Japan was hit with a earthquake, with a magnitude between 9.0 and 9.1. It took thousands of lives, but also damaged the Fukushima Nuclear Power Plant. Japan has sought to store all of this radioactive waters in huge containers. However, they're running out of space as rainwater cotinnously mixes with this water. Thus, they have sought to release this water into the ocean. This had led to international outcry, due to the environmental impacts of releasing radioactive water. Luckily for Japan, they have worked to create a comprehensive plann to treat their water and release it slowly over the next few decades. This plan has been approved by the IAEA, and only time will tell if their regulations will be successful.</p></details></td>\n",
+    "      <td><p><b>2024 Outside Factor:</b> There are two key outside factors that oculd greatly influence the 2024 election. The first of which, is No labels, a potential moderate third party. The group already has 70 million on hand, and has been speaking to potential moderates such as Democratic Senator Joe Manchin, or Maryland's former Republican governor, Larry Hogan. This could siphon votes away from Biden, from the never-trumpers. The second factor is what congress or the supreme court does. The predicted red wave for the midterms didn't come to fruition, largely due to the Roe v. Wade ruling by the Supreme Court. Democrats are hoping that a baseless Republican impeachment could serve the same purpose for 2024.</p></td>\n",
+    "     <td><p><b>Japan Nuclear Water:</b> Japan was hit with a earthquake, with a magnitude between 9.0 and 9.1. It took thousands of lives, but also damaged the Fukushima Nuclear Power Plant. Japan has sought to store all of this radioactive waters in huge containers. However, they're running out of space as rainwater cotinnously mixes with this water. Thus, they have sought to release this water into the ocean. This had led to international outcry, due to the environmental impacts of releasing radioactive water. Luckily for Japan, they have worked to create a comprehensive plann to treat their water and release it slowly over the next few decades. This plan has been approved by the IAEA, and only time will tell if their regulations will be successful.</p></td>\n",
     "  </tr>\n",
     "\n",
     "</table>\n"
@@ -197,7 +239,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "0214c84d",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "#Note: Details doesn't work in pdf format, trying to figure out why right now.."
@@ -206,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83076fb6",
+   "id": "fcc0bc0d",
    "metadata": {},
    "outputs": [],
    "source": []
